Table customers {
  id int [pk, increment]
  name string [not null]
  email string [not null, unique]
  cpf string [not null, unique]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table products {
  id int [pk, increment]
  name string [not null]
  description string
  price decimal(19,2) [not null]
  category_id int [not null, ref: > categories.id]
  image_url string
  staff_id int [ref: > staffs.id]
  active bool [default: true]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table categories {
  id int [pk, increment]
  name string [not null]
  created_at datetime [not null, default: `now()`]
}

Table orders {
  id int [pk, increment]
  customer_id int [null, ref: > customers.id]
  total_bill decimal(19,2)
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table order_history {
  order_id int [pk, ref: > orders.id]
  staff_id int [pk, ref: > staffs.id]
  status enum ('OPEN', 'CANCELLED', 'PENDING','RECEIVED', 'PREPARING', 'READY', 'COMPLETED') [default: 'RECEIVED']
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table order_products {
  order_id int [pk, ref: > orders.id]
  product_id int [pk, ref: > products.id]
  price decimal(19,2)
  quantity int [not null]
}

Table payments {
  id int [pk, increment]
  status enum ('PROCESSING', 'CONFIRMED', 'CANCELED', 'FAILED') [default: 'PROCESSING']
  external_payment_id string
  order_id int [not null, ref: > orders.id]
  qr_data  string
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table staffs {
  id int [pk, increment]
  name string [not null]
  role enum ('COOK', 'ATTEDANT', 'MANAGER')
}


Ref: "order_products"."product_id" < "order_history"."order_id"
